--- a/blog-post.html
+++ b/blog-post.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="./styles/blog-page2.css" rel="stylesheet">
+    <link href="./styles/blog-post.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="https://platform-api.sharethis.com/js/sharethis.js#property=5e873755780af00019d5c7e7&product=inline-share-buttons" async="async">
     </script>
