--- a/blog-post.html
+++ b/blog-post.html
@@ -30,7 +30,7 @@
             </div>
             <div class="pic1 box">
                 <figure class="illustration Iceland">
-                    <img src="/scandinavian-journeys/img/iceland-pic1.jpg" alt="Icy lake in Iceland">
+                    <img src="/img/iceland-pic1.jpg" alt="Icy lake in Iceland">
                 </figure>
                 <figurecapture>Lake of ice</figurecapture>
             </div>
@@ -50,7 +50,7 @@
             </div>
             <div class="pic2 box">
                 <figure class="illustration iceland">
-                    <img src="/scandinavian-journeys/img/iceland-pic2.jpg" alt="Waterfall in Iceland">
+                    <img src="/img/iceland-pic2.jpg" alt="Waterfall in Iceland">
                 </figure>
                 <figurecapture>Waterfall</figurecapture>
             </div>
@@ -87,7 +87,7 @@
                 </div>
                 <div class="pic1 box">
                     <figure class="illustration Iceland">
-                        <img src="/scandinavian-journeys/img/finland-pic1.jpg" alt="Sunset in Finland">
+                        <img src="/img/finland-pic1.jpg" alt="Sunset in Finland">
                     </figure>
                     <figurecapture>Sunset at "Tarina" golf-course</figurecapture>
                 </div>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="pic2 box">
                     <figure class="illustration iceland">
-                        <img src="/scandinavian-journeys/img/finland-pic2.jpg" alt="Enchanting swamp in Oulanka Park">
+                        <img src="/img/finland-pic2.jpg" alt="Enchanting swamp in Oulanka Park">
                     </figure>
                     <figurecapture>Oulanka National Park</figurecapture>
                 </div>
