--- a/blog-post.html
+++ b/blog-post.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container box">
-    <div class="top-menu box"><a href="/index.html"></a>HOME</div>
+    <div class="top-menu box"><a href="index.html" alt="Go back to the main page">HOME</a></div>
     <div class="header box"><h1>Scandinavian journeys</h1></div>
     <div class="about box">
         <h2>About me</h2>
