editings of main page styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="keywords" content="scandinavia, finland, sweden, iceland, travel, blog">
 </head>
 <body>
-    <div class = "container">
+    <div class = "main-page-container">
         <div class="top-bar box">
         <div class="top-menu box">
             HOME
