pages renamed, styles cleanedup

--- a/blog-post.html
+++ b/blog-post.html
@@ -135,7 +135,7 @@
             </div>
             </article>
     </div>
-    <div class="footer box">&copy;Liudmila Rybakova</div>
+    <footer>&copy; Liudmila Rybakova</footer>
     </div>
     
 </body>
