--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <link href="./styles/styles.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./styles/main-page1.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Scandinavian journeys | Personal blog - Liudmila |Rybakova</title>
+    <title>Scandinavian journeys | Personal blog - Liudmila Rybakova</title>
     <meta name="description" content="My personal blog about travelling to Scandinavian countries">
     <meta name="keywords" content="scandinavia, finland, sweden, iceland, travel, blog">
 </head>
