--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="blog-post.html#Iceland">Iceland</a></li>
                 <li><a href="blog-post.html#Finland">Finland</a></li>
-                <li><a href="blog-post.html#Finland">Sweden</a></li>
+                <li><a href="blog-post.html#Sweden">Sweden</a></li>
             </ul>
         </nav>
         <article class="main-content">
