code validation fixes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h2>About me</h2>
                 <p>Welcome to Liudmila's travel blog! Here I share my photos and tips about  journeys across Scandinavia.
                 </p>
-                <p><a href="blog-post.html" alt="Read more about me and my journeys">More ></a></p>
+                <p><a href="blog-post.html">More ></a></p>
             </article>
         </main>
         <footer>
