--- a/blog-post.html
+++ b/blog-post.html
@@ -17,7 +17,7 @@
         <div class="name">
             <h3>Liudmila&nbsp;Rybakova</h3>
         </div>
-        <div class="avatar-layout"><img class="avatar" src="img/avatar.jpg" width="160" height="160" alt="Liudmila Rybakova's photo"></div>
+        <div class="avatar-layout"><img class="avatar" src="img/avatar.jpg" alt="Liudmila Rybakova's photo"></div>
         <div class="bio">I am a passionate traveler and photographer, born in Russia,  based in Finland. I am a huge fan of Scandinavia, hope you are too! Let's rock! :)</div>
         <a href="https://twitter.com/dizelle?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @dizelle</a><script async src="https://platform.twitter.com/widgets.js"></script>
         </div>
