--- a/static/blog-post.html
+++ b/static/blog-post.html
@@ -150,6 +150,9 @@
                     airbnb, check both before booking
                   </li>
                   <li>
+                    If you happen to be in Kuopio and looking for quick and reliable clothing alteration services I recommend to contact <a href="https://nopeaneula.fi">Ompelimo Nopea Neula</a>. They are famous for great quality of work, high speed and affordable prices. 
+                  </li>
+                  <li>
                     Alcohol is very expensive here and sold in special stores
                     named Alko. Makes sense to bring own from duty free
                   </li>
